--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.ai.navigation": "2.0.9",
     "com.unity.cinemachine": "2.10.4",
     "com.unity.collab-proxy": "2.10.2",
+    "com.unity.dt.app-ui": "2.1.3",
     "com.unity.ide.rider": "3.0.38",
     "com.unity.ide.visualstudio": "2.0.25",
     "com.unity.inputsystem": "1.14.2",
